src/internal/vm/snapshots/hebi__internal__vm__tests__init_class_with_multiple_methods.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  fn test_0(self): pass
  fn test_1(self): pass
T()


# Result:
Object(
    ClassInstance {
        name: "T",
        fields: {
            "test_0": Object(
                Function {
                    descriptor: FunctionDescriptor {
                        name: "test_0",
                        params: Params {
                            has_self: true,
                            min: 0,
                            max: 0,
                        },
                        upvalues: RefCell {
                            value: [],
                        },
                        frame_size: 1,
                        instructions: 2,
                        constants: 0,
                    },
                    upvalues: [],
                    module_id: ModuleId(
                        None,
                    ),
                },
            ),
            "test_1": Object(
                Function {
                    descriptor: FunctionDescriptor {
                        name: "test_1",
                        params: Params {
                            has_self: true,
                            min: 0,
                            max: 0,
                        },
                        upvalues: RefCell {
                            value: [],
                        },
                        frame_size: 1,
                        instructions: 2,
                        constants: 0,
                    },
                    upvalues: [],
                    module_id: ModuleId(
                        None,
                    ),
                },
            ),
        },
        parent: None,
    },
)
