src/internal/vm/snapshots/hebi__internal__vm__tests__init_data_class_derived_with_parent_method.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  v = 0
  fn test(self): pass
class U(T): pass
U()


# Result:
Object(
    ClassInstance {
        name: "U",
        fields: {
            "v": Int(
                0,
            ),
            "test": Object(
                Function {
                    descriptor: FunctionDescriptor {
                        name: "test",
                        params: Params {
                            has_self: true,
                            min: 0,
                            max: 0,
                        },
                        upvalues: RefCell {
                            value: [],
                        },
                        frame_size: 1,
                        instructions: 2,
                        constants: 0,
                    },
                    upvalues: [],
                    module_id: ModuleId(
                        None,
                    ),
                },
            ),
        },
        parent: Some(
            ClassType {
                name: "T",
                init: None,
                fields: {
                    "v": Int(
                        0,
                    ),
                },
                methods: {
                    "test": Function {
                        descriptor: FunctionDescriptor {
                            name: "test",
                            params: Params {
                                has_self: true,
                                min: 0,
                                max: 0,
                            },
                            upvalues: RefCell {
                                value: [],
                            },
                            frame_size: 1,
                            instructions: 2,
                            constants: 0,
                        },
                        upvalues: [],
                        module_id: ModuleId(
                            None,
                        ),
                    },
                },
                parent: None,
            },
        ),
    },
)
