src/internal/vm/snapshots/hebi__internal__vm__tests__init_simple_class.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T: pass
T()


# Result:
Object(
    ClassInstance {
        name: "T",
        fields: {},
        parent: None,
    },
)
