src/internal/vm/snapshots/hebi__internal__vm__tests__init_simple_data_class.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  v = 0
T()


# Result:
Object(
    ClassInstance {
        name: "T",
        fields: {
            "v": Int(
                0,
            ),
        },
        parent: None,
    },
)
