src/internal/vm/snapshots/hebi__internal__vm__tests__list_indexing_invalid.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
[0, 1, 2]["yo"]


# Result:
runtime error: `yo` is not a valid index
