src/internal/vm/snapshots/hebi__internal__vm__tests__list_indexing_oob.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
[0, 1, 2][100]


# Result:
runtime error: index `100` out of bounds, len was `3`
